[tool.poetry]
name = "redacted"
version = "0.1.0"
description = "Keep your config secrets in place and out of Git."
authors = ["Payson Wallach <payson@paysonwallach.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.scripts]
git-redact = "redacted.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
